fix spacing, add wrapper to list event

--- a/src/resources/postcss/views/list/_event.pcss
+++ b/src/resources/postcss/views/list/_event.pcss
@@ -4,17 +4,50 @@
 	 * Event
 	 * ----------------------------------------------------------------------------- */
 
-	.tribe-events-calendar-list__month-separator + .tribe-events-calendar-list__event {
-		margin-top: var(--spacer-5);
+	.tribe-events-calendar-list__event-wrapper {
+		margin-bottom: var(--spacer-5);
+		margin-top: var(--spacer-7);
+
+		@media (--viewport-medium) {
+			margin-bottom: var(--spacer-8);
+			margin-top: var(--spacer-9);
+		}
+
+		&:last-child {
+			margin-bottom: var(--spacer-8);
+
+			@media (--viewport-medium) {
+				margin-bottom: var(--spacer-11);
+			}
+		}
+	}
+
+	.tribe-events-calendar-list__month-separator + .tribe-events-calendar-list__event-wrapper {
+		margin-top: var(--spacer-4);
 
 		@media (--viewport-medium) {
 			margin-top: var(--spacer-7);
 		}
 	}
 
+	.tribe-events-calendar-list__event-date-tag {
+		flex: none;
+		margin-right: var(--grid-gutter-small-half-negative);
+		width: var(--grid-width-1-of-4);
+	}
+
+	.tribe-events-calendar-list__event {
+		flex-direction: column;
+
+		@media (--viewport-medium) {
+			flex-direction: row-reverse;
+			justify-content: flex-end;
+		}
+	}
+
 	.tribe-events-calendar-list__event-featured-image-wrapper {
 		flex: none;
-		margin-bottom: var(--spacer-5);
+		margin-bottom: var(--spacer-3);
 
 		@media (--viewport-medium) {
 			margin-bottom: 0;
@@ -32,6 +65,13 @@
 		@media (--viewport-medium) {
 			margin-left: var(--grid-width-1-of-9);
 			width: calc(5 * var(--grid-width-1-of-9));
+		}
+	}
+
+	.tribe-events-calendar-list__event-header {
+
+		> *:last-child {
+			margin-bottom: 0;
 		}
 	}
 
@@ -65,6 +105,16 @@
 
 		@media (--viewport-medium) {
 			margin-bottom: var(--spacer-3);
+		}
+	}
+
+	.tribe-events-calendar-list__event-description {
+		@mixin hidden;
+
+		@media (--viewport-medium) {
+			display: block !important;
+			margin-top: var(--spacer-3);
+			visibility: visible;
 		}
 	}
 }
