--- a/src/resources/postcss/views/list/_month-separator.pcss
+++ b/src/resources/postcss/views/list/_month-separator.pcss
@@ -21,26 +21,4 @@
 	.tribe-events-calendar-list__month-separator-text {
 		flex: none;
 	}
-
-	.tribe-events-calendar-list__event {
-		display: flex;
-		flex-direction: column;
-		margin-bottom: var(--spacer-5);
-		margin-top: var(--spacer-8);
-
-		@media (--viewport-medium) {
-			flex-direction: row-reverse;
-			justify-content: flex-end;
-			margin-bottom: var(--spacer-7);
-			margin-top: var(--spacer-10);
-		}
-
-		&:last-child {
-			margin-bottom: var(--spacer-8);
-
-			@media (--viewport-medium) {
-				margin-bottom: var(--spacer-10);
-			}
-		}
-	}
 }
